--- a/frontend/src/assets/styles.css
+++ b/frontend/src/assets/styles.css
@@ -20,4 +20,13 @@ tbody tr:nth-of-type(odd) {
     background-color: rgba(221, 101, 101, 0.2);
     padding-left: 5px;
     padding-right: 5px;
-  }
+}
+
+table > tbody > tr > td:nth-child(1),
+table > thead > tr > th:nth-child(1) {
+   position: sticky !important;
+   position: -webkit-sticky !important;
+   left: 0;
+   z-index: 0;
+   background-color: white;
+ }
