--- a/frontend/src/assets/styles.css
+++ b/frontend/src/assets/styles.css
@@ -30,3 +30,8 @@ table > thead > tr > th:nth-child(1) {
    z-index: 0;
    background-color: white;
  }
+
+ .v-data-table td,
+ .v-data-table th {
+    padding: 4px !important;
+}
