Improved layout on BoardList
* Boards sorted alphabetically
* Added spacing between icons
* Added flyobver hint on all buttons
* All clickable widgets behave like links (pointer, under-line)
* moved fakelink to styles.css

--- a/frontend/src/assets/styles.css
+++ b/frontend/src/assets/styles.css
@@ -45,3 +45,8 @@ table > thead > tr > th:nth-child(1) {
  .v-data-table th {
     padding: 4px !important;
 }
+
+.fakelink {
+    text-decoration: underline;
+    cursor: pointer;
+}
